// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/BlockSpin should render BlockSpin with children 1`] = `
<div
  className="container"
>
  <div
    className="spinWrapper"
  >
    <div
      className="spinner"
    >
      <Spin />
    </div>
  </div>
  <div>
    Content
  </div>
</div>
`;

exports[`UI/BlockSpin should render default BlockSpin 1`] = `
<div
  className="container"
>
  <div
    className="spinWrapper"
  >
    <div
      className="spinner"
    >
      <Spin />
    </div>
  </div>
</div>
`;
